--- a/app/views/student/create.scala.html
+++ b/app/views/student/create.scala.html
@@ -12,7 +12,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row pt-md-5">
             <div class="col-md-8">
             @form(action = CSRF(routes.StudentController.save())) {
                 <div class="form-row">
