--- a/app/views/student/edit.scala.html
+++ b/app/views/student/edit.scala.html
@@ -4,7 +4,7 @@
 
 @sidebarLayout("Edit Student") {
     @views.html.shared.adminSidebar()
-}{
+} {
     <div class="pt-md-5">
         <div class="page-header row">
             <div class="col-sm-12">
@@ -12,7 +12,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row pt-md-5">
             <div class="col-md-8">
 
             @form(action = CSRF(routes.StudentController.update(id))) {
@@ -121,7 +121,8 @@
                 </div>
 
                 <button type="submit" class="btn btn-primary">Save</button>
-                <button type="reset" class="btn btn-secondary">Cancel</button>
+                <a href="@routes.StudentController.all()" class="btn btn-secondary btn-md" role="button" aria-pressed="true">
+                    Back to list</a>
             }
             </div>
         </div>
